# ha-print-bridge

./: .gitignore  CHANGELOG.md  README.md  hacs.json  pyproject.toml  requirements-test.txt  setup-dev.sh
.github/workflows/: release.yml
blueprints/automation/auto_print/: print_from_email.yaml
blueprints/automation/print_bridge/: print_from_email.yaml
custom_components/auto_print/: __init__.py  binary_sensor.py  booklet_maker.py  button.py  config_flow.py  const.py  coordinator.py  imap_handler.py  manifest.json  print_handler.py  sensor.py  services.yaml  strings.json
custom_components/auto_print/translations/: en.json
custom_components/print_bridge/: __init__.py  binary_sensor.py  booklet_maker.py  button.py  config_flow.py  const.py  coordinator.py  document_converter.py  imap_checker.py  logbook.py  mail_params.py  manifest.json  page_order.py  print_handler.py  print_profiles.py  raster_converter.py  select.py  sensor.py  services.yaml  signal_client.py  strings.json  switch.py  text.py
custom_components/print_bridge/blueprints/automation/print_bridge/: print_from_email.yaml
custom_components/print_bridge/translations/: en.json
docker/: README.md  docker-compose.yml  validate.sh
docker/cups/: Dockerfile
docker/ha-config/: configuration.yaml
home-assistant/: README.md  automations.yaml  booklet_maker.py  pdf_downloader.py  print_handler.py  shell_commands.yaml  shell_commands_canon_printer.yaml
lovelace/: auto_print_audit.yaml  print_bridge_audit.yaml  printer_dashboard_template.yaml
tests/: conftest.py  test_booklet_maker.py  test_document_converter.py  test_ha_scripts.py  test_imap_handler.py  test_mail_params.py  test_page_order.py  test_print_handler.py  test_print_profiles.py  test_raster_converter.py  test_signal_client.py
tests/ha_integration/: conftest.py  test_config_flow.py  test_coordinator.py  test_entities.py  test_init.py
