[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

# ---------------------------------------------------------------------------
# Project metadata
# ---------------------------------------------------------------------------

[project]
name = "print-bridge"
version = "0.1.24"
description = "Print Bridge: Home Assistant custom component to automatically print common email attachments via IMAP events, with direct IPP/AirPrint and CUPS support, conversion, booklet printing, schedule, audit log, and retry."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = [
    "home-assistant", "hacs", "home-assistant-custom-component",
    "printing", "print", "printer",
    "imap", "email", "email-to-print",
    "ipp", "cups", "airprint",
    "pdf", "pdf-printing",
    "booklet-printing", "duplex",
    "automation", "lovelace",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Home Automation",
    "Topic :: Communications :: Email",
    "Topic :: Printing",
]

# Runtime dependency (installed by HA from manifest.json requirements[])
dependencies = [
    "beautifulsoup4>=4.12.0",
    "markdown>=3.5",
    "odfpy>=1.4.1",
    "openpyxl>=3.1.0",
    "pypdf>=4.0.0",
    "pypdfium2>=4.30.0",
    "python-docx>=1.1.0",
    "python-pptx>=1.0.0",
    "reportlab>=4.0.0",
    "striprtf>=0.0.26",
    "xlrd>=2.0.0",
]

[project.urls]
Homepage      = "https://github.com/rubeecube/ha-print-bridge"
Repository    = "https://github.com/rubeecube/ha-print-bridge"
"Bug Tracker" = "https://github.com/rubeecube/ha-print-bridge/issues"
Changelog     = "https://github.com/rubeecube/ha-print-bridge/releases"

# ---------------------------------------------------------------------------
# Optional: dev / test extras
# ---------------------------------------------------------------------------

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-homeassistant-custom-component>=0.13",
    "beautifulsoup4>=4.12.0",
    "markdown>=3.5",
    "odfpy>=1.4.1",
    "openpyxl>=3.1.0",
    "pypdf>=4.0.0",
    "pypdfium2>=4.30.0",
    "python-docx>=1.1.0",
    "python-pptx>=1.0.0",
    "pyyaml>=6.0",
    "reportlab>=4.0.0",
    "requests>=2.31",
    "striprtf>=0.0.26",
    "xlrd>=2.0.0",
]

# ---------------------------------------------------------------------------
# Pytest configuration (replaces pytest.ini)
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]

# ---------------------------------------------------------------------------
# Setuptools: only package the custom component, not tests or tooling
# ---------------------------------------------------------------------------

[tool.setuptools.packages.find]
where   = ["."]
include = ["custom_components*"]
